--- a/Afasia/src/app/components/menu/menu.component.html
+++ b/Afasia/src/app/components/menu/menu.component.html
@@ -1,17 +1,16 @@
 <div class="container">
-  <div class="card" style="width: 18rem;" id="menuCards" onclick="abrirJuegos()">
+
+  <div class="card" style="width: 18rem;" id="menuCards">
       <img src="/assets/img/afasia.jpg" class="card-img-top" alt="Imagen de afasia" id="img" height="170.34px">
-      <div class="card-body">
-        
-        <h5>¡Empezar a practicar!</h5>
+      <div class="card-body">    
+        <a href="#" class="card-title" id="enlace">¡Empezar a practicar!</a>
       </div>
   </div>
 
-  <div class="card" style="width: 18rem;" id="menuCards" onclick="abrirRendimiento()">
+  <div class="card" style="width: 18rem;" id="menuCards">
       <img src="/assets/img/rendimiento.png" height="170.34px" class="card-img-top" id="img" alt="Imagen de rendimiento">
-      <div class="card-body">
-        
-        <h5>Ver rendimiento</h5>
+      <div class="card-body">       
+        <a href="#" class="card-title" id="enlace">Ver rendimiento</a>
       </div>
   </div>
 
@@ -22,4 +21,5 @@
         <p>Contactanos</p>
       </div>
   </div>-->
+  
 </div>
