--- a/Afasia/src/app/components/menu/menu.component.html
+++ b/Afasia/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <a href="#" class="card-title" id="enlace">
+  <a href="#" class="card-title">
     <div class="card" style="width: 18rem;" id="menuCards">
         <img src="/assets/img/afasia.jpg" class="card-img-top" alt="Imagen de afasia" id="img" height="170.34px">
         <div class="card-body">    
@@ -7,7 +7,7 @@
         </div>
     </div>
   </a>
-  <a href="#" class="card-title" id="enlace">
+  <a href="#" class="card-title">
     <div class="card" style="width: 18rem;" id="menuCards">
         <img src="/assets/img/rendimiento.png" height="170.34px" class="card-img-top" id="img" alt="Imagen de rendimiento">
         <div class="card-body">       
