--- a/Afasia/src/app/app.component.html
+++ b/Afasia/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-navbar></app-navbar>
-<app-menu></app-menu>
+<!--
+<app-menu></app-menu>-->
+
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
