--- a/Afasia/src/app/components/menu/menu.component.html
+++ b/Afasia/src/app/components/menu/menu.component.html
@@ -1,21 +1,21 @@
-<div class="container">
-  <div class="card" style="width: 18rem;" id="menuCards" onclick="abrirJuegos()">
-      <img src="/assets/img/afasia.jpg" class="card-img-top" alt="Imagen de afasia" id="img" height="170.34px">
-      <div class="card-body">
-        
-        <h5>¡Empezar a practicar!</h5>
-      </div>
-  </div>
+<div class="container animated fadeIn">
+    <div class="card" style="width: 18rem;" id="menuCards" onclick="abrirJuegos()">
+        <img src="/assets/img/afasia.jpg" class="card-img-top" alt="Imagen de afasia" id="img" height="170.34px">
+        <div class="card-body">
 
-  <div class="card" style="width: 18rem;" id="menuCards" onclick="abrirRendimiento()">
-      <img src="/assets/img/rendimiento.png" height="170.34px" class="card-img-top" id="img" alt="Imagen de rendimiento">
-      <div class="card-body">
-        
-        <h5>Ver rendimiento</h5>
-      </div>
-  </div>
+            <h5>¡Empezar a practicar!</h5>
+        </div>
+    </div>
 
-  <!--<div class="card text-center" style="width: 18rem;" id="menuCards" href="#">
+    <div class="card" style="width: 18rem;" id="menuCards" onclick="abrirRendimiento()">
+        <img src="/assets/img/rendimiento.png" height="170.34px" class="card-img-top" id="img" alt="Imagen de rendimiento">
+        <div class="card-body">
+
+            <h5>Ver rendimiento</h5>
+        </div>
+    </div>
+
+    <!--<div class="card text-center" style="width: 18rem;" id="menuCards" href="#">
       <img src="/assets/img/maps.png" height="170.34px" class="card-img-top" alt="Imagen de contactanos">
       <div class="card-body">
         
