--- a/Afasia/src/app/components/shared/navbar/navbar.component.html
+++ b/Afasia/src/app/components/shared/navbar/navbar.component.html
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="#">Rendimiento</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contáctanos</a>
+                <a class="nav-link" href="/contacto">Contáctanos</a>
             </li>
             <li class="nav-item dropdown" id="desplegable">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
