--- a/Afasia/src/app/components/registro/registro.component.html
+++ b/Afasia/src/app/components/registro/registro.component.html
@@ -1,7 +1,7 @@
 <div class="container text-center ">
     <form>
         <h2 class=" animated fadeIn fast ">Registro</h2>
-        <hr>
+        <hr style="background-color: white;">
         <div class="form-group animated fadeIn">
             <label for="exampleInputEmail1">Email</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
