--- a/Afasia/src/app/components/shared/navbar/navbar.component.html
+++ b/Afasia/src/app/components/shared/navbar/navbar.component.html
@@ -9,7 +9,7 @@
                 <a class="nav-link" href="/menu">Menú principal <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Rendimiento</a>
+                <a class="nav-link" href="/registro">Rendimiento</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/contacto">Contáctanos</a>
