--- a/Afasia/src/app/components/login/login.component.css
+++ b/Afasia/src/app/components/login/login.component.css
@@ -49,7 +49,7 @@ body {
     background: white;
     outline: none;
     height: 40px;
-    color: #fff;
+    color: black;
     font-size: 16px;
     margin-bottom: 2%;
     border-radius: 0.7em;
@@ -61,7 +61,7 @@ body {
     outline: none;
     height: 40px;
     background: darkslategray;
-    color: #fff;
+    color: white;
     font-size: 18px;
     border-radius: 20px;
     margin-top: 10%;
