--- a/Afasia/src/app/components/bodycontacto/body.component.html
+++ b/Afasia/src/app/components/bodycontacto/body.component.html
@@ -1,30 +1,32 @@
-<div class="container" style="padding-top: 15px; margin: 0 auto;">
+<body>
+    <div class="container" id="container" style="padding-top: 15px; margin: 0 auto;">
 
-    <div class="card-group">
-        <div class="card">
-            <img src="https://www.frlp.utn.edu.ar/sites/default/files/2017-03/FRLP%206.JPG" class="card-img-top animated fadeIn fast" alt="...">
-            <div class="card-body">
-                <h5 class="card-title animated fadeIn fast">Alumnos</h5>
-                <p class="card-text animated fadeIn">Universidad Tecnológica Nacional, Facultad Regional La Plata</p>
+        <div class="card-group">
+            <div class="card" id="card">
+                <img src="https://www.frlp.utn.edu.ar/sites/default/files/2017-03/FRLP%206.JPG" class="card-img-top animated fadeIn fast" id="img1" alt="..." height="42%">
+                <div class="card-body" id="cardbody">
+                    <h5 class="card-title animated fadeIn fast">Alumnos</h5>
+                    <p class="card-text animated fadeIn">Universidad Tecnológica Nacional, Facultad Regional La Plata</p>
 
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="https://www.webconsultas.com/sites/default/files/styles/wc_adaptive_image__small/public/temas/afasia.jpg" class="card-img-top animated fadeIn fast" alt="...">
-            <div class="card-body">
-                <h5 class="card-title animated fadeIn fast">Afasia</h5>
-                <p class="card-text animated fadeIn">Tratamiento para el Trastorno del lenguaje que afecta la capacidad de comunicación de la persona.</p>
+            <div class="card" id="card">
+                <img src="https://www.webconsultas.com/sites/default/files/styles/wc_adaptive_image__small/public/temas/afasia.jpg" class="card-img-top animated fadeIn fast" alt="..." id="img2" height="42%">
+                <div class="card-body" id="cardbody">
+                    <h5 class="card-title animated fadeIn fast">Afasia</h5>
+                    <p class="card-text animated fadeIn">Tratamiento para el Trastorno del lenguaje que afecta la capacidad de comunicación de la persona.</p>
 
+                </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="https://i0.wp.com/www.psicologiahoy.com/wp-content/uploads/2014/08/Afasia.jpg" class="card-img-top animated fadeIn fast" alt="...">
-            <div class="card-body">
-                <h5 class="card-title animated fadeIn fast">Objetivo</h5>
-                <p class="card-text animated fadeIn">Reintegrar o remediar la habilidad del paciente afásico para el habla, la comprensión, la lectura y la escritura • Ayudar al paciente a desarrollar estrategias que compensen o minimicen los problemas del lenguaje • Localizar los problemas
-                    psicológicos asociados que comprometen la calidad de vida de la persona afásica y de sus familiares • Ayudar a la familia y a los allegados a involucrarse en la comunicación con el paciente </p>
+            <div class="card" id="card">
+                <img src="https://i0.wp.com/www.psicologiahoy.com/wp-content/uploads/2014/08/Afasia.jpg" class="card-img-top animated fadeIn fast" id="img3" alt="..." height="42%">
+                <div class="card-body" id="cardbody">
+                    <h5 class="card-title animated fadeIn fast">Objetivo</h5>
+                    <p class="card-text animated fadeIn">Reintegrar o remediar la habilidad del paciente afásico para el habla, la comprensión, la lectura y la escritura • Ayudar al paciente a desarrollar estrategias que compensen o minimicen los problemas del lenguaje • Localizar los problemas
+                        psicológicos asociados que comprometen la calidad de vida de la persona afásica y de sus familiares • Ayudar a la familia y a los allegados a involucrarse en la comunicación con el paciente </p>
 
+                </div>
             </div>
         </div>
     </div>
-</div>
+</body>
