Adapte el formato de registro para que sea el mismo que el de login y puse algunas rutas

--- a/Afasia/src/app/components/registro/registro.component.html
+++ b/Afasia/src/app/components/registro/registro.component.html
@@ -1,21 +1,20 @@
-<div class="container text-center ">
-    <form>
-        <h2 class=" animated fadeIn fast ">Registro</h2>
-        <hr style="background-color: white;">
-        <div class="form-group animated fadeIn">
-            <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tu email con otra persona.</small>
-        </div>
-        <div class="form-group animated fadeIn">
-            <label for="exampleInputPassword1">Usuario</label>
-            <input type="text" class="form-control">
-        </div>
-        <div class="form-group animated fadeIn">
-            <label for="exampleInputPassword1">Contraseña</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
+<body>
 
-        <button type="submit" class="btn btn-primary">Registrarse</button>
-    </form>
-</div>
+    <div class="login-box animated fadeIn fast">
+        <h2 class="animated fadeIn fast">Registrarse en Afasia</h2>
+        <hr>
+        <form>
+
+            <label class="animated fadeIn" for="username">Usuario:
+                <input type="text" placeholder=" Introduzca su nombre de usuario">
+            </label>
+            <label class="animated fadeIn" for="password">Contraseña:
+                <input type="password" placeholder=" Introduzca la contraseña">
+            </label>
+            <label class="animated fadeIn" for="email">Mail:
+                <input type="email" placeholder=" Introduzca su mail">
+            </label>
+            <input class="animated fadeIn" type="submit" value="Registrarse">
+        </form>
+    </div>
+</body>
