--- a/Afasia/src/app/components/login/login.component.html
+++ b/Afasia/src/app/components/login/login.component.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
 
     <link rel="stylesheet">
-  </head>
-  <body>
+</head>
 
-    <div class="login-box">
-      <h2>Iniciar sesión en Afasia</h2>
-      <form>
-      
-        <label for="username">Usuario:</label>
-        <input type="text" placeholder=" Introduzca su nombre de usuario">
-    
-        <label for="password">Contraseña:</label>
-        <input type="password" placeholder=" Introduzca la contraseña">
-        <input type="submit" value="Iniciar Sesión">
-        <a href="#">¿Perdiste tu contraseña?</a><br>
-        <a href="#"> ¿No tienes una cuenta?</a>
-      </form>
+<body>
+
+    <div class="login-box animated fadeIn fast">
+        <h2 class="animated fadeIn fast">Iniciar sesión en Afasia</h2>
+        <form>
+
+            <label class="animated fadeIn" for="username">Usuario:</label>
+            <input type="text" placeholder=" Introduzca su nombre de usuario">
+
+            <label class="animated fadeIn" for="password">Contraseña:</label>
+            <input type="password" placeholder=" Introduzca la contraseña">
+            <input class="animated fadeIn" type="submit" value="Iniciar Sesión">
+            <a class="animated fadeIn" href="#">¿Olvidaste tu contraseña?</a><br>
+            <a class="animated fadeIn" href="/registro"> ¿No tienes una cuenta?</a>
+        </form>
     </div>
-  </body>
+</body>
+
 </html>
