--- a/Afasia/src/app/components/registro/registro.component.css
+++ b/Afasia/src/app/components/registro/registro.component.css
@@ -1,18 +1,85 @@
-* {
-    color: white;
-    background-color: darkslategray;
+body {
+    margin: 0;
+    padding: 0;
+    background: darkslategray;
+    background-size: cover;
+    font-family: sans-serif;
+    height: 100vh;
 }
 
-form {
-    padding: 2% 20%;
+.login-box {
+    width: 330px;
+    height: 450px;
+    background: white;
+    color: black;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
     border-radius: 2em;
 }
 
-h2 {
+.login-box h2 {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: -4%;
+}
+
+.login-box label {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    display: block;
+}
+
+.login-box input {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.login-box input[type="text"],
+.login-box input[type="password"],
+.login-box input[type='email'] {
+    border-bottom: 1px solid black;
+    background: white;
+    outline: none;
+    height: 40px;
+    color: black;
+    font-size: 16px;
     margin-bottom: 2%;
+    border-radius: 0.7em;
+    margin-top: 3%;
 }
 
-.container {
-    margin-top: 5%;
-    border-radius: 2em;
+.login-box input[type="submit"] {
+    border: none;
+    outline: none;
+    height: 40px;
+    background: darkslategray;
+    color: white;
+    font-size: 18px;
+    border-radius: 20px;
+    margin-top: 10%;
+}
+
+.login-box input[type="submit"]:hover {
+    cursor: pointer;
+    background: black;
+    color: white;
+}
+
+.login-box a {
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 20px;
+    color: black;
+}
+
+.login-box a:hover {
+    color: #fff;
 }
