--- a/Afasia/src/app/components/shared/navbar/navbar.component.html
+++ b/Afasia/src/app/components/shared/navbar/navbar.component.html
@@ -5,11 +5,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/menu">Menú principal <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/registro">Rendimiento</a>
+                <a class="nav-link" href="#">Rendimiento</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/contacto">Contáctanos</a>
