--- a/Afasia/src/app/components/bodycontacto/body.component.html
+++ b/Afasia/src/app/components/bodycontacto/body.component.html
@@ -6,7 +6,7 @@
                 <img src="https://www.frlp.utn.edu.ar/sites/default/files/2017-03/FRLP%206.JPG" class="card-img-top animated fadeIn fast" id="img1" alt="..." height="42%">
                 <div class="card-body" id="cardbody">
                     <h5 class="card-title animated fadeIn fast">Alumnos</h5>
-                    <p class="card-text animated fadeIn">Universidad Tecnológica Nacional, Facultad Regional La Plata <br> •franco.cug@gmail.com
+                    <p class="card-text animated fadeIn">Universidad Tecnológica Nacional, Facultad Regional La Plata <br> • Leo.fiorotto@hotmail <br> • alva.98.am@gmail.com <br> •franco.cug@gmail.com
                         <br> •tomypiccinini1@gmail.com
 
                     </p>
@@ -25,7 +25,7 @@
                 <img src="https://i0.wp.com/www.psicologiahoy.com/wp-content/uploads/2014/08/Afasia.jpg" class="card-img-top animated fadeIn fast" id="img3" alt="..." height="42%">
                 <div class="card-body" id="cardbody">
                     <h5 class="card-title animated fadeIn fast">Objetivo</h5>
-                    <p class="card-text animated fadeIn">Reintegrar o remediar la habilidad del paciente afásico para el habla, la comprensión, la lectura y la escritura <br>• Ayudar al paciente a desarrollar estrategias que compensen o minimicen los problemas del lenguaje <br>• Localizar
+                    <p class="card-text animated fadeIn"> • Reintegrar o remediar la habilidad del paciente afásico para el habla, la comprensión, la lectura y la escritura <br>• Ayudar al paciente a desarrollar estrategias que compensen o minimicen los problemas del lenguaje <br>• Localizar
                         los problemas psicológicos asociados que comprometen la calidad de vida de la persona afásica y de sus familiares <br>• Ayudar a la familia y a los allegados a involucrarse en la comunicación con el paciente </p>
 
                 </div>
