--- a/Afasia/src/app/components/bodycontacto/body.component.html
+++ b/Afasia/src/app/components/bodycontacto/body.component.html
@@ -1,19 +1,19 @@
 <body>
-    <div class="container" id="container" style="padding-top: 15px; margin: 0 auto;">
+    <div class="container" id="container" style="padding-top: 15px; padding-bottom: 15px ; margin: 0 auto;">
 
         <div class="card-group">
             <div class="card" id="card">
-                <img src="https://www.frlp.utn.edu.ar/sites/default/files/2017-03/FRLP%206.JPG" class="card-img-top animated fadeIn fast" id="img1" alt="..." height="42%">
+                <img src="https://www.frlp.utn.edu.ar/sites/default/files/2017-03/FRLP%206.JPG" class="card-img-top animated fadeIn fast" id="img1" alt="..." height="50%">
                 <div class="card-body" id="cardbody">
-                    <h5 class="card-title animated fadeIn fast">Alumnos</h5>
-                    <p class="card-text animated fadeIn">Universidad Tecnológica Nacional, Facultad Regional La Plata <br> • Leo.fiorotto@hotmail <br> • alva.98.am@gmail.com <br> •franco.cug@gmail.com
-                        <br> •tomypiccinini1@gmail.com
-
+                    <h5 class="card-title animated fadeIn fast" style="font-size: 40px;">Desarrolladores:</h5>
+                    <p class="card-text animated fadeIn">Somos un grupo de alumnos pertenecientes a la Universidad Tecnológica Nacional, Facultad Regional La Plata. <br> Realizamos este proyecto dentro de la cátedra Metodologías Ágiles. <br> 
+                        Ante cualquier inconveniente, contáctanos vía mail:<br>
+                        • leo.fiorotto@hotmail <br> • alva.98.am@gmail.com <br> • franco.cug@gmail.com
+                        <br> • tomypiccinini1@gmail.com
                     </p>
-
                 </div>
             </div>
-            <div class="card" id="card">
+            <!--<div class="card" id="card">
                 <img src="https://www.webconsultas.com/sites/default/files/styles/wc_adaptive_image__small/public/temas/afasia.jpg" class="card-img-top animated fadeIn fast" alt="..." id="img2" height="42%">
                 <div class="card-body" id="cardbody">
                     <h5 class="card-title animated fadeIn fast">Afasia</h5>
@@ -29,7 +29,7 @@
                         los problemas psicológicos asociados que comprometen la calidad de vida de la persona afásica y de sus familiares <br>• Ayudar a la familia y a los allegados a involucrarse en la comunicación con el paciente </p>
 
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </body>
