--- a/Afasia/src/app/components/inicio/inicio.component.css
+++ b/Afasia/src/app/components/inicio/inicio.component.css
@@ -6,12 +6,13 @@ body{
     margin: 20px;
     border-radius: 2em;
     height: 90vh;
+    padding: 10px 10px 10px 10px;
 }
 #img1{
     border-top-left-radius: 2em;
     border-top-right-radius: 2em;
-    border-bottom-left-radius: 1em;
-    border-bottom-right-radius: 1em;
+    border-bottom-left-radius: 2em;
+    border-bottom-right-radius: 2em;
 }
 
 #titulo{
