--- a/Afasia/src/app/components/inicio/inicio.component.css
+++ b/Afasia/src/app/components/inicio/inicio.component.css
@@ -7,6 +7,7 @@ body{
     border-radius: 2em;
     height: 90vh;
     padding: 10px 10px 10px 10px;
+    border: 3px solid black ;
 }
 #img1{
     border-top-left-radius: 2em;
