--- a/Afasia/src/app/components/login/login.component.html
+++ b/Afasia/src/app/components/login/login.component.html
@@ -19,8 +19,8 @@
             <label class="animated fadeIn" for="password">Contraseña:</label>
             <input type="password" placeholder=" Introduzca la contraseña">
             <input class="animated fadeIn" type="submit" value="Iniciar Sesión">
-            <a class="animated fadeIn" href="#">¿Olvidaste tu contraseña?</a><br>
-            <a class="animated fadeIn" href="/registro"> ¿No tienes una cuenta?</a>
+            <a class="animated fadeIn" routerLink="#">¿Olvidaste tu contraseña?</a><br>
+            <a class="animated fadeIn" routerLink="/registro"> ¿No tienes una cuenta?</a>
         </form>
     </div>
 </body>
