actualizo cod navbar

--- a/Afasia/src/app/components/bodycontacto/body.component.html
+++ b/Afasia/src/app/components/bodycontacto/body.component.html
@@ -6,9 +6,9 @@
                 <img src="https://www.frlp.utn.edu.ar/sites/default/files/2017-03/FRLP%206.JPG" class="card-img-top animated fadeIn fast" id="img1" alt="..." height="50%">
                 <div class="card-body" id="cardbody">
                     <h5 class="card-title animated fadeIn fast" style="font-size: 40px;">Desarrolladores:</h5>
-                    <p class="card-text animated fadeIn">Somos un grupo de alumnos pertenecientes a la Universidad Tecnológica Nacional, Facultad Regional La Plata. <br> Realizamos este proyecto dentro de la cátedra Metodologías Ágiles. <br> 
+                    <p class="card-text animated fadeIn">Somos un grupo de alumnos pertenecientes a la Universidad Tecnológica Nacional Facultad Regional La Plata. <br> Realizamos este proyecto dentro de la cátedra Metodologías Ágiles. <br> 
                         Ante cualquier inconveniente, contáctanos vía mail:<br>
-                        • leo.fiorotto@hotmail <br> • alva.98.am@gmail.com <br> • franco.cug@gmail.com
+                        • leo.fiorotto@hotmail.com <br> • alva.98.am@gmail.com <br> • franco.cug@gmail.com
                         <br> • tomypiccinini1@gmail.com
                     </p>
                 </div>
