--- a/Afasia/src/app/components/bodycontacto/body.component.css
+++ b/Afasia/src/app/components/bodycontacto/body.component.css
@@ -1,15 +1,17 @@
 #img1 {
-    border-top-left-radius: 2em;
-}
+    border-radius: 2em;
 
+}
+/*
 #img1 {
     border-top-right-radius: 2em;
 }
-
+*/
 #card {
     border-radius: 2em;
     background-color: white;
     height: 88vh;
+    border: 3px solid black;
 }
 
 #cardbody {
