--- a/Afasia/src/app/components/shared/navbar/navbar.component.html
+++ b/Afasia/src/app/components/shared/navbar/navbar.component.html
@@ -5,23 +5,28 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item" routerLinkActive="activate">
-                <a class="nav-link" routerLink="/menu">Menú principal <span class="sr-only">(current)</span></a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="/menu">Menú principal<span class="sr-only"></span></a>
             </li>
-            <li class="nav-item" routerLinkActive="activate">
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="#">Rendimiento</a>
             </li>
-            <li class="nav-item" routerLinkActive="activate">
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="/contacto">Contáctanos</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a *ngIf=""
+                class="btn btn-outline-primary" routerLink="/login">Ingresar</a>
             </li>
             <li class="nav-item dropdown" id="desplegable">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Cuenta
-          </a>
+                Cuenta
+                </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" routerLink="#">Configuración</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" routerLink="#">Salir</a>
+                    <a *ngIf=""
+                    class="dropdown-item" routerLink="#">Salir</a>
                 </div>
             </li>
         </ul>
