juego ejemplo + navegacion en empezar a jugar

--- a/Afasia/src/app/components/menu/menu.component.html
+++ b/Afasia/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
 
 
     <div class="container animated fadeIn">
-        <a routerLink="#" class="card-title" id="enlace">
+        <a routerLink="/ejemplo" class="card-title" id="enlace">
             <div class="card" style="width: 18rem;" id="menuCards">
                 <img src="/assets/img/afasia.jpg" class="card-img-top" alt="Imagen de afasia" id="img" height="170.34px">
                 <div class="card-body">
