--- a/Afasia/src/app/components/shared/navbar/navbar.component.html
+++ b/Afasia/src/app/components/shared/navbar/navbar.component.html
@@ -15,8 +15,7 @@
                 <a class="nav-link" routerLink="/contacto">Contáctanos</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a *ngIf=""
-                class="btn btn-outline-primary" routerLink="/login">Ingresar</a>
+                <a *ngIf="" class="btn btn-outline-primary" routerLink="/login">Ingresar</a>
             </li>
             <li class="nav-item dropdown" id="desplegable">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -25,8 +24,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" routerLink="#">Configuración</a>
                     <div class="dropdown-divider"></div>
-                    <a *ngIf=""
-                    class="dropdown-item" routerLink="#">Salir</a>
+                    <a *ngIf="" class="dropdown-item" routerLink="#">Salir</a>
                 </div>
             </li>
         </ul>
