--- a/Frontend/src/app/components/inicio/inicio.component.html
+++ b/Frontend/src/app/components/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<body>
+<!--<body>
     <div class="card-group">
         <div class="card" id="card">
             <img src="https://www.webconsultas.com/sites/default/files/styles/wc_adaptive_image__small/public/temas/afasia.jpg" class="card-img-top animated fadeIn fast" alt="..." id="img1" height="40%">
@@ -21,4 +21,41 @@
             </div>
         </div>
     </div>
+</body>-->
+
+<body>
+
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+  <div class="display">
+    <h1 class="display" id="titulo" >¿Qué es la afasia?</h1>
+    <p class="lean font-weight-bold">• Trastorno del lenguaje que afecta la capacidad de comunicación de la persona.<br>
+        • Puede ocurrir repentinamente después de un derrame cerebral o una lesión en la cabeza, o puede desarrollarse lentamente a partir de un tumor cerebral en crecimiento o de alguna enfermedad cerebral.<br>
+        • La afasia afecta la capacidad de las personas de expresar y comprender el lenguaje oral y escrito.<br>
+        • Una vez que se haya tratado la causa subyacente, el tratamiento principal de la afasia es la terapia del lenguaje.
+    </p>
+  </div>
+  <div class="product-device shadow-sm d-none d-md-block"></div>
+  <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+</div>
+
+<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+  <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+    <div class="my-3 py-3">
+      <h2 class="display-3" id="titulo">¿Para qué está destinado este sitio?</h2>
+      <p class="lead">Nuestro objetivo es reintegrar o remediar la habilidad del paciente afásico para el habla, la comprensión, la lectura y la escritura. Nuestra tarea se centrará en ayudar al paciente a desarrollar 
+        estrategias que compensen o minimicen los problemas del lenguaje mediante distintos juegos y ejercicios, para poder ayudar a la familia y a los allegados, a involucrarse en la comunicación con el paciente.</p>
+    </div>
+    <img src="https://i0.wp.com/www.psicologiahoy.com/wp-content/uploads/2014/08/Afasia.jpg" class="card-img-top animated fadeIn fast" id="img1" alt="..." height="40%">
+  </div>
+  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+    <div class="my-3 p-3">
+      <h2 class="display-5">Ingrese al sitio para acceder a diferentes juegos</h2>
+      <button type="button" class="btn btn-primary" routerLink="/login">Iniciar sesión</button>
+      <br>
+      <br>
+      <a type="button" class="btn btn-secondary" routerLink="/registro">Registrarse</a>
+    </div>
+  </div>
+</div>
+
 </body>
