--- a/Frontend/src/app/components/bodycontacto/body.component.html
+++ b/Frontend/src/app/components/bodycontacto/body.component.html
@@ -3,7 +3,7 @@
 
         <div class="card-group">
             <div class="card" id="card">
-                <img src="https://www.frlp.utn.edu.ar/sites/default/files/2017-03/FRLP%206.JPG" class="card-img-top animated fadeIn fast" id="img1" alt="..." height="50%">
+                <img src='/assets/img/FRLP.jpg' class="card-img-top animated fadeIn fast" id="img1" alt="..." height="50%">
                 <div class="card-body" id="cardbody">
                     <h5 class="card-title animated fadeIn fast" style="font-size: 40px;">Desarrolladores:</h5>
                     <p class="card-text animated fadeIn">Somos un grupo de alumnos pertenecientes a la Universidad Tecnológica Nacional Facultad Regional La Plata. <br> Realizamos este proyecto dentro de la cátedra Metodologías Ágiles. <br> 
