--- a/Frontend/src/app/components/inicio/inicio.component.css
+++ b/Frontend/src/app/components/inicio/inicio.component.css
@@ -1,7 +1,59 @@
 body{
-    height: 60%;
+    height: 100%;
     background-color: darkslategray;
 }
+
+#div1{
+    border-color: black;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-radius: 0.9em;
+    height: 400px;
+
+}
+
+#div2{
+    border-color: black;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-radius: 0.9em;
+    height: 600px;
+    
+   
+
+}
+
+#div3{
+    border-color: black;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-radius: 0.9em;
+    height: 600px;
+    
+
+}
+
+#div4{
+    border-color: black;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-radius: 0.9em;
+    height: 300px;
+
+}
+
+#display{
+    text-align:center;
+}
+
 #card{
     margin: 20px;
     border-radius: 2em;
@@ -14,8 +66,16 @@ body{
     border-top-right-radius: 2em;
     border-bottom-left-radius: 2em;
     border-bottom-right-radius: 2em;
+    width: 500px;
+    
 }
 
 #titulo{
     font-size: 40px;
+    background-repeat: no-repeat;
+    height: 80px;
+    border-radius: 1em;
+    border-radius: 55px 30px 0px 60px;
+    
+
 }
