--- a/Frontend/src/app/components/inicio/inicio.component.html
+++ b/Frontend/src/app/components/inicio/inicio.component.html
@@ -25,9 +25,10 @@
 
 <body>
 
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-  <div class="display">
-    <h1 class="display" id="titulo" >¿Qué es la afasia?</h1>
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" id="div1" style="background-image: url('/assets/img/inicio0.jpg'); " >
+
+  <div class="display" id="display" >
+    <h1 class="display" id="titulo" style="background-image: url('/assets/img/afasia.png'); ">¿Qué es la afasia?</h1>
     <p class="lean font-weight-bold">• Trastorno del lenguaje que afecta la capacidad de comunicación de la persona.<br>
         • Puede ocurrir repentinamente después de un derrame cerebral o una lesión en la cabeza, o puede desarrollarse lentamente a partir de un tumor cerebral en crecimiento o de alguna enfermedad cerebral.<br>
         • La afasia afecta la capacidad de las personas de expresar y comprender el lenguaje oral y escrito.<br>
@@ -39,7 +40,7 @@
 </div>
 
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-  <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+  <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden" id="div2">
     <div class="my-3 py-3">
       <h2 class="display-3" id="titulo">¿Para qué está destinado este sitio?</h2>
       <p class="lead">Nuestro objetivo es reintegrar o remediar la habilidad del paciente afásico para el habla, la comprensión, la lectura y la escritura. Nuestra tarea se centrará en ayudar al paciente a desarrollar 
@@ -47,8 +48,8 @@
     </div>
     <img src="https://i0.wp.com/www.psicologiahoy.com/wp-content/uploads/2014/08/Afasia.jpg" class="card-img-top animated fadeIn fast" id="img1" alt="..." height="40%">
   </div>
-  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-    <div class="my-3 p-3">
+  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" id="div3" style="background-image: url('/assets/img/inicio.jpg');  ">
+    <div class="my-3 p-3" id="div4">
       <h2 class="display-5">Ingrese al sitio para acceder a diferentes juegos</h2>
       <button type="button" class="btn btn-primary" routerLink="/login">Iniciar sesión</button>
       <br>
