--- a/Frontend/src/app/components/bodycontacto/body.component.html
+++ b/Frontend/src/app/components/bodycontacto/body.component.html
@@ -7,11 +7,14 @@
                 <div class="card-body" id="cardbody">
                     <h5 class="card-title animated fadeIn fast" style="font-size: 40px;">Desarrolladores:</h5>
                     <p class="card-text animated fadeIn">Somos un grupo de alumnos pertenecientes a la Universidad Tecnológica Nacional Facultad Regional La Plata. <br> Realizamos este proyecto dentro de la cátedra Metodologías Ágiles. <br> 
-                        Ante cualquier inconveniente, contáctanos vía mail:<br>
-                        • leo.fiorotto@hotmail.com <br> • alva.98.am@gmail.com <br> • franco.cug@gmail.com
-                        <br> • tomypiccinini1@gmail.com
-                    </p>
+                        Ante cualquier inconveniente, contáctanos vía mail:<br></p>
+                        <div id="mailspa"> <svg class="mk-svg-icon" data-name="mk-moon-bubble-dots" data-cacheid="icon-5fb408e58b51f" style=" height:48px; width: 48px; " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M418 32h-324c-51.7 0-94 42.3-94 94v354l96-96h322c51.7 0 94-42.3 94-94v-164c0-51.7-42.3-94-94-94zm-258 224c-17.673 0-32-14.327-32-32s14.327-32 32-32 32 14.327 32 32-14.327 32-32 32zm96 0c-17.673 0-32-14.327-32-32s14.327-32 32-32 32 14.327 32 32-14.327 32-32 32zm96 0c-17.673 0-32-14.327-32-32s14.327-32 32-32 32 14.327 32 32-14.327 32-32 32z"></path></svg>
+                    <strong class="card-text animated fadeIn"><br>• leo.fiorotto@hotmail.com <br> • alva.98.am@gmail.com <br> • franco.cug@gmail.com
+                        <br> • tomypiccinini1@gmail.com </strong>
+                    
+                    </div>
                 </div>
+
             </div>
             <!--<div class="card" id="card">
                 <img src="https://www.webconsultas.com/sites/default/files/styles/wc_adaptive_image__small/public/temas/afasia.jpg" class="card-img-top animated fadeIn fast" alt="..." id="img2" height="42%">
