--- a/Frontend/src/app/components/shared/navbar/navbar.component.html
+++ b/Frontend/src/app/components/shared/navbar/navbar.component.html
@@ -3,27 +3,24 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div  class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/menu">Menú principal<span class="sr-only"></span></a>
+                <a *ngIf="userService.isLoggedIn()" class="nav-link" routerLink="/menu" >Menú principal<span class="sr-only"></span></a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="#">Rendimiento</a>
+                <a *ngIf="userService.isLoggedIn()" class="nav-link" routerLink="#">Rendimiento</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="/contacto">Contáctanos</a>
             </li>
-            <li class="nav-item dropdown" id="desplegable">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Cuenta
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" routerLink="#">Configuración</a>
-                    <div class="dropdown-divider"></div>
-                    <a *ngIf="" class="dropdown-item" routerLink="#">Salir</a>
-                </div>
+           <!-- <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="#">Cuenta</a>
+            </li>-->
+            <li class="nav-item" routerLinkActive="active">
+                <a *ngIf="userService.isLoggedIn()" (click)="logOut()" class="btn btn-danger" routerLink="/inicio">Salir</a>
             </li>
+            
         </ul>
     </div>
 </nav>
