--- a/Frontend/src/app/components/bodycontacto/body.component.css
+++ b/Frontend/src/app/components/bodycontacto/body.component.css
@@ -10,7 +10,7 @@
 #card {
     border-radius: 2em;
     background-color: white;
-    height: 88vh;
+    height: 100%;
     border: 3px solid black;
    }
 
