--- a/Frontend/src/app/components/inicio/inicio.component.css
+++ b/Frontend/src/app/components/inicio/inicio.component.css
@@ -46,7 +46,7 @@ body{
     border-bottom-style: solid;
     border-left-style: solid;
     border-radius: 0.9em;
-    height: 300px;
+    height: auto;
 
 }
 
