--- a/Frontend/src/app/components/ejemplojuego/ejemplo.component.html
+++ b/Frontend/src/app/components/ejemplojuego/ejemplo.component.html
@@ -1,20 +1,31 @@
 <body>
     <div class="containerayuda">
-        <h1 class="bienvenido">Auto</h1><button id="ayuda" (click)="ayuda('Se puede mover y 4 posee ruedas')" class="btn-form">HELP</button>
+        <h1 class="bienvenido" id="palabra"><button type="submit" class="btn-form" (click)="frasesalea()">
+        
+        Palabra</button> </h1>
+
     </div>
     <div id="resultadoT" class="resultadoT">
 
         <div class="card-group">
             <div class="card" id="card">
-                <button (click)="testFun('CORRRECTO!!')" id="imagen1" class="botonimagen"><img src="https://ca-times.brightspotcdn.com/dims4/default/f340c74/2147483647/strip/true/crop/600x500+0+0/resize/840x700!/quality/90/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Fe0%2Fdb%2F0e83c62d421c94e0154c1c20eaa0%2F2017-mclaren-650s.jpg" class="card-img-top animated fadeIn fast" alt="..." id="img1" height="40%"></button>
+                <button (click)="testFunb('INCORRRECTA')" id="imagen1" class="botonimagen"><img src="https://ca-times.brightspotcdn.com/dims4/default/f340c74/2147483647/strip/true/crop/600x500+0+0/resize/840x700!/quality/90/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Fe0%2Fdb%2F0e83c62d421c94e0154c1c20eaa0%2F2017-mclaren-650s.jpg" class="card-img-top animated fadeIn fast img1" alt="..." id="img1" height="40%"></button>
 
             </div>
             <div class="card" id="card">
-                <button (click)="testFun('INCORRRECTA')" id="imagen2" class="botonimagen"><img src="https://travel.home.sndimg.com/content/dam/images/travel/fullset/2012/03/12/0d/luxury-dubai-hotels.rend.hgtvcom.1280.960.suffix/1491580776998.jpeg" class="card-img-top animated fadeIn fast" id="img1" alt="..." height="40%"></button>
+                <button (click)="testFunb('INCORRRECTA')" id="imagen2" class="botonimagen"><img src="https://travel.home.sndimg.com/content/dam/images/travel/fullset/2012/03/12/0d/luxury-dubai-hotels.rend.hgtvcom.1280.960.suffix/1491580776998.jpeg" class="card-img-top animated fadeIn fast img1" id="img2" alt="..." height="40%"></button>
+
+            </div>
+            <div class="card" id="card">
+                <button (click)="testFun('CORRECTA!! 10 PUNTOS')" id="imagen3" class="botonimagen"><img src="https://cdn2.actitudfem.com/media/files/styles/big_img/public/images/2014/09/doggrande.jpg" class="card-img-top animated fadeIn fast" id="img3" class="card-img-top animated fadeIn fast img1" alt="..." height="40%"></button>
+
+            </div>
+            <div class="card" id="card">
+                <button (click)="testFunb('INCORRRECTA')" id="imagen4" class="botonimagen"><img src="https://www.okchicas.com/wp-content/uploads/2015/07/Fotos-de-animales-beb%C3%A9s-1-730x548.jpg" class="card-img-top animated fadeIn fast" id="img4" class="card-img-top animated fadeIn fast img1" alt="..." height="40%"></button>
 
             </div>
 
         </div>
     </div>
-
+    <h1 class="ayuda"><button id="ayuda" (click)='ayuda()' class="btn-form">HELP</button></h1>
 </body>
